force-app/main/default/objects/Identity_Verf_Object_Details__mdt/Identity_Verf_Object_Details__mdt.object-meta.xml
<CustomObject>
    <label>Identity Verf Process Object Details</label>
    <pluralLabel>Identity Verf Process Object Details</pluralLabel>
</CustomObject>