force-app/main/default/objects/Identity_Verf_Object_Details__mdt/fields/Field_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Relationship_Name__c</fullName>
    <label>Field Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>