force-app/main/default/objects/Identity_Verf_Object_Details__mdt/fields/Identity_Verf_Process_Definition__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verf_Process_Definition__c</fullName>
    <inlineHelpText>Identity Verification Process Definition API Name</inlineHelpText>
    <label>Identity Verf Process Definition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SampleVerificationFlow</fullName>
            </value>
            <value>
                <fullName>Contact_Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>