force-app/main/default/objects/Identity_Verf_Object_Details__mdt/fields/Object_Value__c.field-meta.xml
<CustomField>
    <fullName>Object_Value__c</fullName>
    <description>This is used to store first 3 digits of an object record id</description>
    <label>Object Value</label>
    <length>3</length>
    <type>Text</type>
</CustomField>